--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>js-pwdgen-wannabe</title>
 </head>
 <body>
+    <p id="dati-utente"></p>
     <script src="./script.js"></script>
 </body>
 </html>
